--- a/_sass/_masthead.scss
+++ b/_sass/_masthead.scss
@@ -47,7 +47,8 @@
   white-space: nowrap;
 
   &--lg {
-    padding-right: 2em;
+    padding-right: 3.6em;
+     padding-left: 1.5em;
     font-weight: 700;
   }
 }
